namespace rent_for_students.Domain.Entities
{
    public enum ApplicationStatus
    {
        Pending = 0,
        Approved = 1,
        Rejected = 2
    }
}
