@startuml ClassDiagram-v1_4-part2-domain-prototype
hide empty members
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
left to right direction

title StudentRent v1.4 - Part 2 (Domain + Baseline Prototype)

package "Domain.Prototype" {
  interface IRentalApplicationPrototype <<Prototype>> {
    +Clone(): IRentalApplicationPrototype
    +ToRentalApplication(listingId: Guid): RentalApplication
  }
}

package "Domain.Entities" {
  class HousingListing {
    +Id: Guid
    +Title: string
    +Description: string
    +City: string
    +District: string
    +PricePerMonth: decimal
    +RoomType: RoomType
    +AreaSqm: int
    +IsActive: bool
    +CreatedAtUtc: DateTime
  }

  class RentalApplication {
    +Id: Guid
    +ListingId: Guid
    +ApplicantName: string
    +Phone: string
    +Email: string
    +Message: string
    +Status: ApplicationStatus
    +CreatedAtUtc: DateTime
    +Approve()
  }

  class RentalApplicationProfile <<ConcretePrototype>> {
    +Id: Guid
    +ProfileName: string
    +ApplicantName: string
    +Phone: string
    +Email: string
    +Message: string
    +CreatedAtUtc: DateTime
    +UpdatedAtUtc: DateTime
    +Clone(): IRentalApplicationPrototype
    +ToRentalApplication(listingId: Guid): RentalApplication
  }

  enum RoomType {
    Studio
    OneBedroom
    TwoBedroom
    ThreeBedroom
  }

  enum ApplicationStatus {
    Pending
    Approved
    Rejected
  }
}

package "Domain.Requests" {
  class ListingSearchCriteria
}

package "Domain.Contracts" {
  interface IHousingRepository {
    +GetByIdAsync(id, ct)
    +SearchAsync(criteria, ct)
    +AddAsync(listing, ct)
    +UpdateAsync(listing, ct)
    +SaveChangesAsync(ct)
  }

  interface IRentalApplicationRepository {
    +AddAsync(app, ct)
    +GetByIdAsync(id, ct)
    +ListByListingIdAsync(listingId, ct)
    +SaveChangesAsync(ct)
  }

  interface IRentalApplicationProfileRepository {
    +AddAsync(prototype, ct)
    +GetByIdAsync(id, ct): Task<IRentalApplicationPrototype?>
    +ListAsync(ct): Task<IReadOnlyList<IRentalApplicationPrototype>>
    +SaveChangesAsync(ct)
  }
}

package "Domain.Services" {
  class HousingService {
    +SearchListingsAsync(criteria, ct)
    +GetListingDetailsAsync(id, ct)
    +CreateListingAsync(listing, ct)
    +CreateListingDraftAsync(draft, ct)
    +UpdateListingDraftAsync(id, draft, ct)
    +PublishListingAsync(id, ct)
    +UpdateListingAsync(id, listing, ct)
  }
}

RentalApplicationProfile ..|> IRentalApplicationPrototype
IRentalApplicationPrototype --> RentalApplication : build target

HousingService --> IHousingRepository
ListingSearchCriteria --> RoomType
HousingListing --> RoomType
RentalApplication --> ApplicationStatus

note right of IRentalApplicationPrototype
  Baseline Prototype:
  client uses interface,
  object clones itself via Clone().
end note

@enduml
